force-app/main/default/objects/LogoutEvent__c/LogoutEvent__c.object-meta.xml
<CustomObject>
    <label>LogoutEvent</label>
    <nameField>
        <displayFormat>LG-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LogoutEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>