force-app/main/default/objects/LogoutEvent__c/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>EventDate</label>
    <type>DateTime</type>
</CustomField>