force-app/main/default/objects/LogoutEvent__c/fields/LoginKey__c.field-meta.xml
<CustomField>
    <fullName>LoginKey__c</fullName>
    <label>LoginKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>