force-app/main/default/objects/LogoutEvent__c/fields/RelatedEventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>RelatedEventIdentifier__c</fullName>
    <label>RelatedEventIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>