force-app/main/default/objects/LogoutEvent__c/fields/SessionKey__c.field-meta.xml
<CustomField>
    <fullName>SessionKey__c</fullName>
    <label>SessionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>