force-app/main/default/objects/LogoutEvent__c/fields/SessionLevel__c.field-meta.xml
<CustomField>
    <fullName>SessionLevel__c</fullName>
    <label>SessionLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>