force-app/main/default/objects/LogoutEvent__c/fields/SourceIp__c.field-meta.xml
<CustomField>
    <fullName>SourceIp__c</fullName>
    <label>SourceIp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>