force-app/main/default/objects/LogoutEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventDate__c</columns>
    <columns>EventIdentifier__c</columns>
    <columns>LoginKey__c</columns>
    <columns>RelatedEventIdentifier__c</columns>
    <columns>ReplayId__c</columns>
    <columns>SessionKey__c</columns>
    <columns>SessionLevel__c</columns>
    <columns>SourceIp__c</columns>
    <columns>UserId__c</columns>
    <columns>Username__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>